--- a/css/style.css
+++ b/css/style.css
@@ -848,12 +848,19 @@ input[type="checkbox"]:disabled + label:hover:before{
 	display: block;
 	text-decoration: none;
 	margin-left: 40px;
-	color: #000000;
+	color: #c7c7c7;
 	padding: 5px 0px;
-	border: 2px solid transparent;
+	border-bottom: 2px dotted #00ca74;
+	
 }
 .catalog-filter ul a:hover {
-	border-bottom: 2px dotted #01a25e;
+	border-bottom: 2px solid #00ca74;
+	color: #000000;
+}
+.catalog-filter ul .active {
+	color: #000000;
+	border: 2px solid transparent;
+
 }
 .catalog-filter-triangles {
 	display: inline-block;
@@ -955,7 +962,7 @@ input[type="checkbox"]:disabled + label:hover:before{
 }
 .catalog-content a.btn:active {
 	background: #b63538;
-	box-shadow:inset 0 -3px 0 0 #9b2d30;
+	box-shadow:0 -3px 0 0 #9b2d30;
 }
 .catalog-content p {
 	height: 50px;
@@ -1024,7 +1031,7 @@ input[type="checkbox"]:disabled + label:hover:before{
 }
 .catalog-pagination a:active {
 	background: #d5d5d5;
-	border: 2
+	border: 2px solid #d5d5d5;
 	box-shadow: 0 -3px 0 0 #b5b5b5;
 }
 
