--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,7 @@ content: "\62";
 /*************************features**********************************************/
 .features {
 	min-height: 380px;	
-	background:url(../img/index/divide.png) no-repeat bottom;
+	border-bottom: 2px solid #eeeeee;
 	
 }
 .features-name {
@@ -345,12 +345,13 @@ content: "\62";
 	margin: 0;
 	margin-top: 25px;
 	margin-bottom: -2px;
-	font-weight: 600;
+	font-weight: 500;
+	margin-left: -3px;
 }
 .features-desc {
 	font-size: 15px;
 	line-height: 22px;
-	font-weight: 600;
+	font-weight: 500;
 	margin-bottom: 25px;
 
 }
@@ -390,7 +391,7 @@ content: "\62";
 
 .features .anchor-1:active {
 	background: #b63538;
-	box-shadow: 0 -3px 0px 0 #9b2d30;
+	box-shadow:inset 0 3px 0px 0 #9b2d30;
 }
 
 .features .anchor-2 {
@@ -403,7 +404,7 @@ content: "\62";
 
 .features .anchor-2:active{
 	background: #009053;
-	box-shadow: 0 -3px 0 0 #007b47;
+	box-shadow:inset 0 3px 0 0 #007b47;
 }
 
 .features .anchor-3 {
@@ -416,7 +417,7 @@ content: "\62";
 
 .features .anchor-3:active {
 	background: #c09b24;
-	box-shadow: 0 -3px 0 0 #a3841f;
+	box-shadow:inset 0 3px 0 0 #a3841f;
 }
 /*********************************************about-company**********************/
 
@@ -440,9 +441,11 @@ content: "\62";
 	
 .about-company-slogan {
 	margin-top: 70px;
-	margin-bottom: 18px;
+	margin-bottom: 17px;
 	font-size: 36px;
 	line-height: 36px;
+	font-weight: 500;
+	margin-left: -2px;
 	
 }
 .about-container-right {
@@ -527,7 +530,7 @@ content: "\62";
 	margin: 0;
 	text-transform: uppercase;
 	margin-bottom: 22px;
-	margin-top: -12px;
+	margin-top: -13px;
 	margin-left: -1px;
 	font-size: 16px;
 	line-height: 22px;
@@ -606,13 +609,14 @@ content: "\62";
 	border:none;
 	cursor: pointer;
 	font-weight: bold;
+	border-radius: 3px;
 }
 .sidebar-btn:hover {
 	background: #e5e5e5;
 }
 .sidebar-btn:active {
 	background:#d5d5d5;
-	box-shadow: 0 -3px 0 0 #b5b5b5;
+	box-shadow:inset 0 3px 0 0 #b5b5b5;
 }
 .sidebar fieldset {
 	border:none;
@@ -888,7 +892,7 @@ input[type="checkbox"]:disabled + label:hover:before{
 	content: "";
   position: absolute;
   top: 0;
-  background-image:url("../img/catalog/xxx.jpg");
+  background-image:url("../img/xxx.jpg");
   background-repeat: no-repeat;
   height: 30px;
   width: 240px;
@@ -939,7 +943,7 @@ input[type="checkbox"]:disabled + label:hover:before{
 }
 .catalog-content a.btn:active {
 	background: #b63538;
-	box-shadow:0 -3px 0 0 #9b2d30;
+	box-shadow:inset 0 3px 0 0 #9b2d30;
 }
 .catalog-content p {
 	height: 50px;
@@ -976,21 +980,23 @@ input[type="checkbox"]:disabled + label:hover:before{
 }
 .catalog-pagination a:first-child {
 	margin-left: 20px;
+	border:2px solid red;
 }
 .catalog-pagination a {
  display:inline-block;
  font-size: 12px;
- font-weight: bold;
- height: 35px;
- min-width: 35px;
+ font-weight: 500;
+ height: 37px;
+ min-width: 37px;
  vertical-align:middle;
  text-align:center;
- line-height: 35px;
+ line-height: 37px;
  color: #000000;
  text-decoration: none; 
  background-color:#f1f1f1;
- margin-right: 4px;
- border: 2px solid #f1f1f1;
+ margin-right: 6px;
+ border-radius: 3px;
+ 
 	
 }
 .catalog-pagination .catalog-next {
@@ -1001,17 +1007,19 @@ input[type="checkbox"]:disabled + label:hover:before{
 .catalog-pagination a.active:active,
 .catalog-pagination a.active:hover,
 .catalog-pagination a.active {
+	height: 35px;
+	line-height: 35px;
+ min-width: 35px;
 	background: transparent;
 	border: 2px solid #f2f2f2;
 }
 .catalog-pagination a:hover {
 	background: #e5e5e5;
-	border: 2px solid #e5e5e5;
+	
 }
 .catalog-pagination a:active {
-	background: #d5d5d5;
-	border: 2px solid #d5d5d5;
-	box-shadow: 0 -3px 0 0 #b5b5b5;
+	background: #d5d5d5;	
+	box-shadow:inset 0 3px 0 0 #b5b5b5;
 }
 
 
@@ -1028,13 +1036,14 @@ input[type="checkbox"]:disabled + label:hover:before{
 	vertical-align: middle;
 	text-align: center;
 	opacity: 0.2;
-	margin-right: 120px;
+	margin-right: 117px;
 }
 .gallery ul li:last-child {
 	margin-right: 0;
 }
 .gallery ul li:first-child {
 	margin-left: -30px;
+	margin-top: -10px;
 }
 .gallery ul li:focus,
 .gallery ul li:hover {
@@ -1050,8 +1059,8 @@ input[type="checkbox"]:disabled + label:hover:before{
 	background-color: white;
 	width: 250px;
 	height: 240px;	
-	top:90px;	
-	left:300px;	
+	top:85px;	
+	left:210px;	
 
 }
 .contacts-adress-btn {
@@ -1068,7 +1077,7 @@ input[type="checkbox"]:disabled + label:hover:before{
 }
 .contacts-adress-title {
 	font-size: 16px;
-	margin-top: 23px;
+	margin-top: 26px;
 	line-height: 30px;
 	text-transform: uppercase;
 	margin-left:20px;
@@ -1104,8 +1113,8 @@ input[type="checkbox"]:disabled + label:hover:before{
 .footer-slogan {
 	font-size: 36px;
 	line-height: 36px;
-	margin-top: 28px;
-	margin-bottom: -7px;
+	margin-top: 25px;
+	margin-bottom: -5px;
 }
 
 /**************btn******************************/
@@ -1118,7 +1127,7 @@ input[type="checkbox"]:disabled + label:hover:before{
 	font-size: 0;
 	background:#e1e1e1;
 	position: relative;
-	margin-top:33px;
+	margin-top:30px;
 	margin-right: 26px;
 }
 
@@ -1128,7 +1137,7 @@ input[type="checkbox"]:disabled + label:hover:before{
 
 .social-btn:active{
  background: #d6494d;
- box-shadow: 0 -3px 0px 0 #b63e42;
+ box-shadow:inset 0 3px 0px 0 #b63e42;
 
 }
 .social-btn:before {
